# BadApple-LM3S8962

./: .gitignore  .gitmodules  CMakeLists.txt
player_client/: play.py
src/: FreeRTOSConfig.h  FreeRTOSIPConfig.h  ParTest.c  ba.c  ba.h  emac.c  ethernet.c  main.c  music.h  rit128x96x4.c  startup.c  uIP_Task.c  uip-conf.h
